--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chcreation.pointofsale">
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -9,6 +10,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autoFocus" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +31,7 @@
         <activity android:name=".merchant.MerchantActivity" />
         <activity android:name=".merchant.NewMerchantActivity" />
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".customer.CustomerActivity" />
+        <activity android:name=".customer.NewCustomerActivity" />
         <activity android:name=".product.NewProductActivity" />
         <activity android:name=".HomeActivity" />
         <activity
