--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,5 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.anko:anko:$anko_version"
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
