--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".checkout.SelectCustomerActivity"></activity>
+        <activity android:name=".ErrorActivity"></activity>
+        <activity android:name=".checkout.SelectCustomerActivity" />
         <activity android:name=".transaction.DetailTransactionActivity" />
         <activity android:name=".transaction.TransactionFragment" />
         <activity android:name=".checkout.ReceiptActivity" />
