--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".user.UserListActivity"></activity>
+        <activity android:name=".user.AddUserActivity"></activity>
+        <activity android:name=".user.UserDetailActivity" />
+        <activity android:name=".user.UserListActivity" />
         <activity android:name=".customer.CustomerDetailActivity" />
         <activity android:name=".customer.CustomerEnquiryActivity" />
         <activity android:name=".product.ManageProductManageStockActivity" />
