- Fixing Layout - Add Chart Analytic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".analytic.AnalyticActivity"></activity>
+        <activity android:name=".analytic.AnalyticFilterActivity"></activity>
+        <activity android:name=".analytic.AnalyticActivity" />
         <activity android:name=".product.InstallmentPlanActivity" />
         <activity android:name=".user.AddUserActivity" />
         <activity android:name=".user.UserDetailActivity" />
