- Added Permission on Manage Product - Added Popup on Share Product - Fixing User Permission in Android Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" />
-    <uses-feature android:name="android.hardware.camera.autoFocus" />
+        android:required="false" />
+    <uses-feature android:name="android.hardware.camera.autoFocus"
+        android:required="false"/>
 
     <application
         android:allowBackup="true"
