--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.jsibbold:zoomage:1.3.1'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
