--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.chcreation.pointofsale"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 5
-        versionName "2.1.0"
+        versionCode 6
+        versionName "2.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -77,4 +77,5 @@ dependencies {
     implementation 'com.jsibbold:zoomage:1.3.1'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
